Add recommendations section

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,9 @@
             <li class="navigation__list-item">
               <a href="#registry">Registry</a>
             </li>
+            <li class="navigation__list-item">
+              <a href="#favorites">ATL Favorites</a>
+            </li>
           </ul>
         </nav>
         <div class="content">
@@ -169,8 +172,139 @@
               </div>
             </div>
           </section>
-          <footer class="container container-fullscreen">
+          <section class="container container-fullscreen favorites" id="favorites">
             <div class="container__content container__enclosed">
+              <h2 class="headline">Atlanta Favorites</h2>
+              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
+              <p class="favorites__description">The following are Taylor and Richard's recommendations for those looking for a taste of Atlanta while in town.</p>
+              <h2 class="favorites__headline">West Side</h2>
+              <ul class="favorites__list">
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Star Provisions</h3>
+                          <p>Coffee, breakfast, lunch</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Taqueria Del Sol</h3>
+                          <p>Lunch and dinner</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Little Trouble</h3>
+                          <p>Cocktails</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Jeni's Ice Cream</h3>
+                          <p>Ice Cream</p>
+                      </aside>
+                  </li>
+              </ul>
+              <h2 class="favorites__headline">Midtown</h2>
+              <ul class="favorites__list">
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Takorea</h3>
+                          <p>Richard's taco Tuesday HQ.</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Tamarind Seed</h3>
+                          <p>Richard's taco Tuesday HQ.</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Piedmont Park</h3>
+                          <p>Strolling.</p>
+                      </aside>
+                  </li>
+              </ul>
+              <h2 class="favorites__headline">Inman Park/Old Fourth Ward</h2>
+              <ul class="favorites__list">
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Ladybird Grove &amp; Mess Hall</h3>
+                          <p>Good drinks and food.</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Victory Sandwich Bar</h3>
+                          <p>Little sandwiches, Jack &amp; Coke Slushies</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Ponce City Market</h3>
+                          <p>Shopping, eating, loitering.</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Krog Street Market</h3>
+                          <p>Shopping, eating, loitering, BEER.</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>The Albert</h3>
+                          <p>Awesome burgers.</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>The Beltline</h3>
+                          <p>Walking trail</p>
+                      </aside>
+                  </li>
+              </ul>
+              <h2 class="favorites__headline">Grant Park</h2>
+              <ul class="favorites__list">
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Daddy D's</h3>
+                          <p>Great BBQ.</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Ria's Bluebird</h3>
+                          <p>Breakfast and brunch</p>
+                      </aside>
+                  </li>
+                  <li class="favorites__list--item">
+                      <a href="#" class="favorites__image"></a>
+                      <aside class="favorites__details">
+                          <h3>Octane Coffee</h3>
+                          <p>The original</p>
+                      </aside>
+                  </li>
+              </ul>
+            </div>
+          </section>
+          <footer class="container container-fullscreen">
+            <div class="container__content">
                 <div class="end">
                     <div class="end__carousel">
                         <img src="images/1.jpg" alt="" class="end__image">
