Add photos for favorites

--- a/app/index.html
+++ b/app/index.html
@@ -180,28 +180,36 @@
               <h2 class="favorites__headline">West Side</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/starprovisions.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Star Provisions</h3>
                           <p>Coffee, breakfast, lunch</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/taqueriadelsol.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Taqueria Del Sol</h3>
                           <p>Lunch and dinner</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/littletrouble.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Little Trouble</h3>
                           <p>Cocktails</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/jenis.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Jeni's Ice Cream</h3>
                           <p>Ice Cream</p>
@@ -211,66 +219,84 @@
               <h2 class="favorites__headline">Midtown</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/takorea.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Takorea</h3>
                           <p>Richard's taco Tuesday HQ.</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/tamarind.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Tamarind Seed</h3>
                           <p>Richard's taco Tuesday HQ.</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/piedmontpark.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Piedmont Park</h3>
                           <p>Strolling.</p>
                       </aside>
                   </li>
               </ul>
-              <h2 class="favorites__headline">Inman Park/Old Fourth Ward</h2>
+              <h2 class="favorites__headline">Inman Park / Old Fourth Ward</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/ladybird.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Ladybird Grove &amp; Mess Hall</h3>
                           <p>Good drinks and food.</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/victory.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Victory Sandwich Bar</h3>
                           <p>Little sandwiches, Jack &amp; Coke Slushies</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/ponce.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Ponce City Market</h3>
                           <p>Shopping, eating, loitering.</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/krog.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Krog Street Market</h3>
                           <p>Shopping, eating, loitering, BEER.</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/albert.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>The Albert</h3>
                           <p>Awesome burgers.</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/beltline.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>The Beltline</h3>
                           <p>Walking trail</p>
@@ -280,21 +306,27 @@
               <h2 class="favorites__headline">Grant Park</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/daddydzs.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Daddy D's</h3>
                           <p>Great BBQ.</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/rias.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Ria's Bluebird</h3>
                           <p>Breakfast and brunch</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image"></a>
+                      <a href="#" class="favorites__image">
+                          <img src="images/octane.jpg" alt="">
+                      </a>
                       <aside class="favorites__details">
                           <h3>Octane Coffee</h3>
                           <p>The original</p>
