Add descriptions to favorites and build

--- a/app/index.html
+++ b/app/index.html
@@ -176,7 +176,7 @@
             <div class="container__content container__enclosed">
               <h2 class="headline">Atlanta Favorites</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
-              <p class="favorites__description">The following are Taylor and Richard's recommendations for those looking for a taste of Atlanta while in town.</p>
+              <p class="favorites__description">We want you to enjoy yourself while you're visiting Atlanta, so we made a list of some of our favorite spots around the city. If you would like any further recommendations, just ask!</p>
               <h2 class="favorites__headline">West Side</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
@@ -185,7 +185,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Star Provisions</h3>
-                          <p>Coffee, breakfast, lunch</p>
+                          <p>coffee, breakfast, lunch</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -194,7 +194,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Taqueria Del Sol</h3>
-                          <p>Lunch and dinner</p>
+                          <p>lunch and dinner</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -203,7 +203,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Little Trouble</h3>
-                          <p>Cocktails</p>
+                          <p>cocktails and neon</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -212,7 +212,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Jeni's Ice Cream</h3>
-                          <p>Ice Cream</p>
+                          <p>the good stuff</p>
                       </aside>
                   </li>
               </ul>
@@ -224,7 +224,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Takorea</h3>
-                          <p>Richard's taco Tuesday HQ.</p>
+                          <p>Richard's Taco Tuesday HQ</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -233,7 +233,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Tamarind Seed</h3>
-                          <p>Richard's taco Tuesday HQ.</p>
+                          <p>killer Thai food</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -242,7 +242,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Piedmont Park</h3>
-                          <p>Strolling.</p>
+                          <p>casual strolling</p>
                       </aside>
                   </li>
               </ul>
@@ -254,7 +254,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Ladybird Grove &amp; Mess Hall</h3>
-                          <p>Good drinks and food.</p>
+                          <p>good drinks and food, great porch</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -263,7 +263,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Victory Sandwich Bar</h3>
-                          <p>Little sandwiches, Jack &amp; Coke Slushies</p>
+                          <p>little sandwiches, jack &amp; coke slushy</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -272,7 +272,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Ponce City Market</h3>
-                          <p>Shopping, eating, loitering.</p>
+                          <p>shopping, eating, loitering</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -281,7 +281,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Krog Street Market</h3>
-                          <p>Shopping, eating, loitering, BEER.</p>
+                          <p>shopping, eating, loitering, BEER</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -290,7 +290,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>The Albert</h3>
-                          <p>Awesome burgers.</p>
+                          <p>awesome burgers</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -299,7 +299,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>The Beltline</h3>
-                          <p>Walking trail</p>
+                          <p>walking trail</p>
                       </aside>
                   </li>
               </ul>
@@ -310,8 +310,8 @@
                           <img src="images/daddydzs.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
-                          <h3>Daddy D's</h3>
-                          <p>Great BBQ.</p>
+                          <h3>Daddy D'z</h3>
+                          <p>great BBQ</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -320,7 +320,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Ria's Bluebird</h3>
-                          <p>Breakfast and brunch</p>
+                          <p>breakfast and brunch</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
@@ -329,7 +329,7 @@
                       </a>
                       <aside class="favorites__details">
                           <h3>Octane Coffee</h3>
-                          <p>The original</p>
+                          <p>hipster central</p>
                       </aside>
                   </li>
               </ul>
