Add links to pictures

--- a/app/index.html
+++ b/app/index.html
@@ -176,11 +176,11 @@
             <div class="container__content container__enclosed">
               <h2 class="headline">Atlanta Favorites</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
-              <p class="favorites__description">We want you to enjoy yourself while you're visiting Atlanta, so we made a list of some of our favorite spots around the city. If you would like any further recommendations, just ask!</p>
+              <p class="favorites__description">We want you to enjoy yourself while you're visiting Atlanta, so we made a list of some of our favorite spots around the city. For additional  ATL recommendations, visit <a href="http://atlanta.eater.com/">eater.atlanta.com</a> and <a href="http://www.atlanta.net/">atlanta.net</a>, or just ask us!</p>
               <h2 class="favorites__headline">West Side</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.starprovisions.com/" class="favorites__image">
                           <img src="images/starprovisions.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -189,7 +189,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.taqueriadelsol.com/" class="favorites__image">
                           <img src="images/taqueriadelsol.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -198,7 +198,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="https://www.facebook.com/littletroubleatl/" class="favorites__image">
                           <img src="images/littletrouble.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -207,7 +207,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="https://jenis.com/scoop-shops/jenis-westside-provisions/" class="favorites__image">
                           <img src="images/jenis.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -219,7 +219,7 @@
               <h2 class="favorites__headline">Midtown</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.mytakorea.com/" class="favorites__image">
                           <img src="images/takorea.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -228,7 +228,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.tamarindseed.com/" class="favorites__image">
                           <img src="images/tamarind.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -237,7 +237,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.piedmontpark.org/" class="favorites__image">
                           <img src="images/piedmontpark.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -249,7 +249,7 @@
               <h2 class="favorites__headline">Inman Park / Old Fourth Ward</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.ladybirdatlanta.com/" class="favorites__image">
                           <img src="images/ladybird.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -258,7 +258,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.vicsandwich.com/#info" class="favorites__image">
                           <img src="images/victory.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -267,7 +267,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://poncecitymarket.com/" class="favorites__image">
                           <img src="images/ponce.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -276,7 +276,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.krogstreetmarket.com/" class="favorites__image">
                           <img src="images/krog.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -285,7 +285,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.thealbertatlanta.com/" class="favorites__image">
                           <img src="images/albert.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -294,7 +294,7 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://beltline.org/" class="favorites__image">
                           <img src="images/beltline.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -306,7 +306,7 @@
               <h2 class="favorites__headline">Grant Park</h2>
               <ul class="favorites__list">
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.daddydz.com/" class="favorites__image">
                           <img src="images/daddydzs.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
@@ -315,16 +315,16 @@
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://riasbluebird.com/" class="favorites__image">
                           <img src="images/rias.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
                           <h3>Ria's Bluebird</h3>
-                          <p>breakfast and brunch</p>
+                          <p>Taylor's top pick for pancakes</p>
                       </aside>
                   </li>
                   <li class="favorites__list--item">
-                      <a href="#" class="favorites__image">
+                      <a href="http://www.octanecoffee.com/grant-park-1" class="favorites__image">
                           <img src="images/octane.jpg" alt="">
                       </a>
                       <aside class="favorites__details">
